--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
     <properties>
         <spring>4.3.1.RELEASE</spring>
+        <lombokVersion>1.16.16</lombokVersion>
     </properties>
 
     <build>
@@ -251,6 +252,12 @@
             <version>4.12</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombokVersion}</version>
+            <scope>provided</scope>
+        </dependency>
 
     </dependencies>
 
